syntax = "proto3";
package csrf;

// import "common/common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto  
option go_package = "./;csrf_microservice";

enum ErrorCode {
    OK = 0;
    COULD_NOT_BUILD_QUERY = 1;
    TOKEN_NOT_GENERATED = 2;
    CSRF_EXPIRED = 3;
    CSRF_NOT_FOUND = 4;
    CSRF_NOT_CREATED = 5;
}

message CSRFToken {
    string Value = 1;
}

message CSRFData {
    string ID = 1;
    google.protobuf.Timestamp ExpirationDate = 2;
}

message UserID {
    uint64 Value = 1;
}

message SetupCSRFRequest {
    string RequestID = 1;
    UserID Value = 2;
}

message SetupCSRFResponse {
    ErrorCode Code = 1;
    CSRFData Response = 2;
}

message VerifyCSRFRequest {
    string RequestID = 1;
    CSRFToken Value = 2;
}

message VerifyCSRFResponse {
    ErrorCode Code = 1;
}

message DeleteCSRFRequest {
    string RequestID = 1;
    CSRFToken Value = 2;
}

message DeleteCSRFResponse {
    ErrorCode Code = 1;
}

message GetLifetimeResponse {
    ErrorCode Code = 1;
    google.protobuf.Duration Response = 2;
}

service CSRFService {
	rpc SetupCSRF (SetupCSRFRequest) returns (SetupCSRFResponse) {}
	rpc VerifyCSRF (VerifyCSRFRequest) returns (VerifyCSRFResponse) {}
	rpc DeleteCSRF (DeleteCSRFRequest) returns (DeleteCSRFResponse) {}
	rpc GetLifetime (google.protobuf.Empty) returns (GetLifetimeResponse) {}
}